Se cambio el grid de gastos y se ajusto para cambiar los valores adicionales

--- a/MetalLiqViajes_Bll_Data/MetalLiqViajes_Bll_Data.csproj
+++ b/MetalLiqViajes_Bll_Data/MetalLiqViajes_Bll_Data.csproj
@@ -125,6 +125,7 @@
     <Compile Include="bll_add\LiquidacionGastos.cs" />
     <Compile Include="bll_add\LiquidacionPlanilla.cs" />
     <Compile Include="bll_add\LiquidacionVehiculo.cs" />
+    <Compile Include="bll_add\Terceros.cs" />
     <Compile Include="bll_add\TramosAsignadosRuta.cs" />
     <Compile Include="bll_add\TramosConsultaAnticipos.cs" />
     <Compile Include="bll_add\TramosGastos.cs" />
@@ -208,6 +209,7 @@
     <Compile Include="dal_add\LiquidacionGastosDataProvider.cs" />
     <Compile Include="dal_add\LiquidacionPlanillaDataProvider.cs" />
     <Compile Include="dal_add\LiquidacionVehiculoDataProvider.cs" />
+    <Compile Include="dal_add\TercerosDataProvider.cs" />
     <Compile Include="dal_add\TramosAsignadosRutaDataProvider.cs" />
     <Compile Include="dal_add\TramosConsultaAnticiposDataProvider.cs" />
     <Compile Include="dal_add\TramosGastosDataProvider.cs" />
@@ -290,6 +292,7 @@
     <Compile Include="dto\y_novedades_Liq.cs" />
     <Compile Include="dto_add\LiquidacionGastos.cs" />
     <Compile Include="dto_add\LiquidacionPlanilla.cs" />
+    <Compile Include="dto_add\TercerosDTO.cs" />
     <Compile Include="dto_add\TramosAsignadosRuta.cs" />
     <Compile Include="dto_add\LiquidacionVehiculo.cs" />
     <Compile Include="dto_add\RegistroViajeDTO.cs" />
