se modifica el reporte, se agrega la lectura el modulo de satrac

--- a/MetalLiqViajes_Forms/MetalLiqViajes_Forms/App.config
+++ b/MetalLiqViajes_Forms/MetalLiqViajes_Forms/App.config
@@ -1,6 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="MetalLiqViajes_Forms.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+    <applicationSettings>
+        <MetalLiqViajes_Forms.Properties.Settings>
+            <setting name="MetalLiqViajes_Forms_EventsSatrac_getEvents" serializeAs="String">
+                <value>https://webcloud.satrack.com/WebServiceEventos/getEvents.asmx</value>
+            </setting>
+        </MetalLiqViajes_Forms.Properties.Settings>
+    </applicationSettings>
 </configuration>
