--- a/MetalLiqViajes_Forms/MetalLiqViajes_Forms/Properties/Settings.settings
+++ b/MetalLiqViajes_Forms/MetalLiqViajes_Forms/Properties/Settings.settings
@@ -1,7 +1,9 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="MetalLiqViajes_Forms.Properties" GeneratedClassName="Settings">
+  <Profiles />
+  <Settings>
+    <Setting Name="MetalLiqViajes_Forms_EventsSatrac_getEvents" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">https://webcloud.satrack.com/WebServiceEventos/getEvents.asmx</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
