Se add consulta Satrac

--- a/MetalLiqViajes_Bll_Data/MetalLiqViajes_Bll_Data.csproj
+++ b/MetalLiqViajes_Bll_Data/MetalLiqViajes_Bll_Data.csproj
@@ -87,10 +87,16 @@
     <Compile Include="bll\RutasAbreviaturas.cs" />
     <Compile Include="bll\RutasAgrupaPeajes.cs" />
     <Compile Include="bll\RutasAgrupaPeajesDet.cs" />
+    <Compile Include="bll\RutaSatrackEvents.cs" />
+    <Compile Include="bll\RutaSatrackHistoryEvents.cs" />
+    <Compile Include="bll\RutaSatrackKilometros.cs" />
+    <Compile Include="bll\RutaSatrackLastEvents.cs" />
     <Compile Include="bll\RutasCombustible.cs" />
     <Compile Include="bll\RutasCuentas.cs" />
     <Compile Include="bll\RutasDet.cs" />
     <Compile Include="bll\RutasMaestroPeajes.cs" />
+    <Compile Include="bll\RutasSatrackParametros.cs" />
+    <Compile Include="bll\RutasSatrackTipoEventos.cs" />
     <Compile Include="bll\Rutas_Peajes.cs" />
     <Compile Include="bll\Rutas_Peajes_Detalle.cs" />
     <Compile Include="bll\Status.cs" />
@@ -170,11 +176,17 @@
     <Compile Include="dal\RutasAbreviaturasDataProvider.cs" />
     <Compile Include="dal\RutasAgrupaPeajesDataProvider.cs" />
     <Compile Include="dal\RutasAgrupaPeajesDetDataProvider.cs" />
+    <Compile Include="dal\RutaSatrackEventsDataProvider.cs" />
+    <Compile Include="dal\RutaSatrackHistoryEventsDataProvider.cs" />
+    <Compile Include="dal\RutaSatrackKilometrosDataProvider.cs" />
+    <Compile Include="dal\RutaSatrackLastEventsDataProvider.cs" />
     <Compile Include="dal\RutasCombustibleDataProvider.cs" />
     <Compile Include="dal\RutasCuentasDataProvider.cs" />
     <Compile Include="dal\RutasDataProvider.cs" />
     <Compile Include="dal\RutasDetDataProvider.cs" />
     <Compile Include="dal\RutasMaestroPeajesDataProvider.cs" />
+    <Compile Include="dal\RutasSatrackParametrosDataProvider.cs" />
+    <Compile Include="dal\RutasSatrackTipoEventosDataProvider.cs" />
     <Compile Include="dal\Rutas_PeajesDataProvider.cs" />
     <Compile Include="dal\Rutas_Peajes_DetalleDataProvider.cs" />
     <Compile Include="dal\StatusDataProvider.cs" />
@@ -256,10 +268,16 @@
     <Compile Include="dto\RutasAbreviaturas.cs" />
     <Compile Include="dto\RutasAgrupaPeajes.cs" />
     <Compile Include="dto\RutasAgrupaPeajesDet.cs" />
+    <Compile Include="dto\RutaSatrackEvents.cs" />
+    <Compile Include="dto\RutaSatrackHistoryEvents.cs" />
+    <Compile Include="dto\RutaSatrackKilometros.cs" />
+    <Compile Include="dto\RutaSatrackLastEvents.cs" />
     <Compile Include="dto\RutasCombustible.cs" />
     <Compile Include="dto\RutasCuentas.cs" />
     <Compile Include="dto\RutasDet.cs" />
     <Compile Include="dto\RutasMaestroPeajes.cs" />
+    <Compile Include="dto\RutasSatrackParametros.cs" />
+    <Compile Include="dto\RutasSatrackTipoEventos.cs" />
     <Compile Include="dto\Rutas_Peajes.cs" />
     <Compile Include="dto\Rutas_Peajes_Detalle.cs" />
     <Compile Include="dto\Status.cs" />
