Ajuste al servicio

--- a/MetalLiqViajes_Services/App.config
+++ b/MetalLiqViajes_Services/App.config
@@ -1,6 +1,40 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="MetalLiqViajes_Services.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+    <applicationSettings>
+        <MetalLiqViajes_Services.Properties.Settings>
+            <setting name="MetalLiqViajes_Services_EventsSatrac_getEvents"
+                serializeAs="String">
+                <value>https://webcloud.satrack.com/WebServiceEventos/getEvents.asmx</value>
+            </setting>
+            <setting name="Interval" serializeAs="String">
+                <value>400000</value>
+            </setting>
+            <setting name="UserName" serializeAs="String">
+                <value>jgmaya</value>
+            </setting>
+            <setting name="Password" serializeAs="String">
+                <value>2277</value>
+            </setting>
+            <setting name="IntervalMadrugada" serializeAs="String">
+                <value>1800000</value>
+            </setting>
+            <setting name="HoraInicioTopeMadrudada" serializeAs="String">
+                <value>4</value>
+            </setting>
+            <setting name="IntervalNoche" serializeAs="String">
+                <value>1800000</value>
+            </setting>
+            <setting name="HoraInicioMaximoNoche" serializeAs="String">
+                <value>21</value>
+            </setting>
+        </MetalLiqViajes_Services.Properties.Settings>
+    </applicationSettings>
 </configuration>
