Ajuste al servicio

--- a/MetalLiqViajes_Services/App.config
+++ b/MetalLiqViajes_Services/App.config
@@ -4,6 +4,9 @@
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="MetalLiqViajes_Services.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="MetalLiqViajes_Services.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
@@ -15,7 +18,7 @@
                 <value>https://webcloud.satrack.com/WebServiceEventos/getEvents.asmx</value>
             </setting>
             <setting name="Interval" serializeAs="String">
-                <value>400000</value>
+                <value>300000</value>
             </setting>
             <setting name="UserName" serializeAs="String">
                 <value>jgmaya</value>
@@ -24,17 +27,24 @@
                 <value>2277</value>
             </setting>
             <setting name="IntervalMadrugada" serializeAs="String">
-                <value>1800000</value>
+                <value>3600000</value>
             </setting>
             <setting name="HoraInicioTopeMadrudada" serializeAs="String">
-                <value>4</value>
+                <value>3</value>
             </setting>
             <setting name="IntervalNoche" serializeAs="String">
-                <value>1800000</value>
+                <value>3600000</value>
             </setting>
             <setting name="HoraInicioMaximoNoche" serializeAs="String">
                 <value>21</value>
             </setting>
         </MetalLiqViajes_Services.Properties.Settings>
     </applicationSettings>
+    <userSettings>
+        <MetalLiqViajes_Services.Properties.Settings>
+            <setting name="IntervalStart" serializeAs="String">
+                <value>30000</value>
+            </setting>
+        </MetalLiqViajes_Services.Properties.Settings>
+    </userSettings>
 </configuration>
