--- a/MetalLiqViajes_Bll_Data/MetalLiqViajes_Bll_Data.csproj
+++ b/MetalLiqViajes_Bll_Data/MetalLiqViajes_Bll_Data.csproj
@@ -130,6 +130,7 @@
     <Compile Include="bll_add\LiquidacionGastos.cs" />
     <Compile Include="bll_add\LiquidacionPlanilla.cs" />
     <Compile Include="bll_add\LiquidacionVehiculo.cs" />
+    <Compile Include="bll_add\RutaSatrackHistoryEvents.cs" />
     <Compile Include="bll_add\Terceros.cs" />
     <Compile Include="bll_add\TramosAsignadosRuta.cs" />
     <Compile Include="bll_add\TramosConsultaAnticipos.cs" />
@@ -220,6 +221,7 @@
     <Compile Include="dal_add\LiquidacionGastosDataProvider.cs" />
     <Compile Include="dal_add\LiquidacionPlanillaDataProvider.cs" />
     <Compile Include="dal_add\LiquidacionVehiculoDataProvider.cs" />
+    <Compile Include="dal_add\RutaSatrackHistoryEventsDataProvider.cs" />
     <Compile Include="dal_add\TercerosDataProvider.cs" />
     <Compile Include="dal_add\TramosAsignadosRutaDataProvider.cs" />
     <Compile Include="dal_add\TramosConsultaAnticiposDataProvider.cs" />
