aSJUSTE AL mAPA

--- a/MetalLiqViajes_Forms/MetalLiqViajes_Forms/App.config
+++ b/MetalLiqViajes_Forms/MetalLiqViajes_Forms/App.config
@@ -26,6 +26,12 @@
             <setting name="Password" serializeAs="String">
                 <value>2277</value>
             </setting>
+            <setting name="CantidadMarcadores" serializeAs="String">
+                <value>8</value>
+            </setting>
+            <setting name="DiasHistorico" serializeAs="String">
+                <value>1</value>
+            </setting>
         </MetalLiqViajes_Forms.Properties.Settings>
     </userSettings>
 </configuration>
