--- a/MetalLiqViajes_Forms/MetalLiqViajes_Forms/packages.config
+++ b/MetalLiqViajes_Forms/MetalLiqViajes_Forms/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="GMap.NET.WindowsForms" version="1.7.5" targetFramework="net452" />
+  <package id="WhatsAppAPI" version="15.4.29" targetFramework="net452" />
 </packages>
