ajuste a crea viaje

--- a/MetalLiqViajes_Bll_Data/MetalLiqViajes_Bll_Data.csproj
+++ b/MetalLiqViajes_Bll_Data/MetalLiqViajes_Bll_Data.csproj
@@ -311,6 +311,7 @@
     <Compile Include="dto\y_novedades_Liq.cs" />
     <Compile Include="dto_add\LiquidacionGastos.cs" />
     <Compile Include="dto_add\LiquidacionPlanilla.cs" />
+    <Compile Include="dto_add\TercerosConductores.cs" />
     <Compile Include="dto_add\TercerosDTO.cs" />
     <Compile Include="dto_add\TramosAsignadosRuta.cs" />
     <Compile Include="dto_add\LiquidacionVehiculo.cs" />
