--- a/MetalLiqViajes_Bll_Data/MetalLiqViajes_Bll_Data.csproj
+++ b/MetalLiqViajes_Bll_Data/MetalLiqViajes_Bll_Data.csproj
@@ -95,6 +95,7 @@
     <Compile Include="bll\RutasCuentas.cs" />
     <Compile Include="bll\RutasDet.cs" />
     <Compile Include="bll\RutasMaestroPeajes.cs" />
+    <Compile Include="bll\RutasOrigenDestino.cs" />
     <Compile Include="bll\RutasSatrackParametros.cs" />
     <Compile Include="bll\RutasSatrackTipoEventos.cs" />
     <Compile Include="bll\Rutas_Peajes.cs" />
@@ -186,6 +187,7 @@
     <Compile Include="dal\RutasDataProvider.cs" />
     <Compile Include="dal\RutasDetDataProvider.cs" />
     <Compile Include="dal\RutasMaestroPeajesDataProvider.cs" />
+    <Compile Include="dal\RutasOrigenDestinoDataProvider.cs" />
     <Compile Include="dal\RutasSatrackParametrosDataProvider.cs" />
     <Compile Include="dal\RutasSatrackTipoEventosDataProvider.cs" />
     <Compile Include="dal\Rutas_PeajesDataProvider.cs" />
@@ -278,6 +280,7 @@
     <Compile Include="dto\RutasCuentas.cs" />
     <Compile Include="dto\RutasDet.cs" />
     <Compile Include="dto\RutasMaestroPeajes.cs" />
+    <Compile Include="dto\RutasOrigenDestino.cs" />
     <Compile Include="dto\RutasSatrackParametros.cs" />
     <Compile Include="dto\RutasSatrackTipoEventos.cs" />
     <Compile Include="dto\Rutas_Peajes.cs" />
