Ajuste a las rutas

--- a/MetalLiqViajes_Bll_Data/MetalLiqViajes_Bll_Data.csproj
+++ b/MetalLiqViajes_Bll_Data/MetalLiqViajes_Bll_Data.csproj
@@ -93,9 +93,12 @@
     <Compile Include="bll\RutaSatrackLastEvents.cs" />
     <Compile Include="bll\RutasCombustible.cs" />
     <Compile Include="bll\RutasCuentas.cs" />
+    <Compile Include="bll\RutasDestino.cs" />
     <Compile Include="bll\RutasDet.cs" />
     <Compile Include="bll\RutasMaestroPeajes.cs" />
+    <Compile Include="bll\RutasOrigen.cs" />
     <Compile Include="bll\RutasOrigenDestino.cs" />
+    <Compile Include="bll\RutasOrigenTipoTrailer.cs" />
     <Compile Include="bll\RutasSatrackParametros.cs" />
     <Compile Include="bll\RutasSatrackTipoEventos.cs" />
     <Compile Include="bll\Rutas_Peajes.cs" />
@@ -185,9 +188,12 @@
     <Compile Include="dal\RutasCombustibleDataProvider.cs" />
     <Compile Include="dal\RutasCuentasDataProvider.cs" />
     <Compile Include="dal\RutasDataProvider.cs" />
+    <Compile Include="dal\RutasDestinoDataProvider.cs" />
     <Compile Include="dal\RutasDetDataProvider.cs" />
     <Compile Include="dal\RutasMaestroPeajesDataProvider.cs" />
+    <Compile Include="dal\RutasOrigenDataProvider.cs" />
     <Compile Include="dal\RutasOrigenDestinoDataProvider.cs" />
+    <Compile Include="dal\RutasOrigenTipoTrailerDataProvider.cs" />
     <Compile Include="dal\RutasSatrackParametrosDataProvider.cs" />
     <Compile Include="dal\RutasSatrackTipoEventosDataProvider.cs" />
     <Compile Include="dal\Rutas_PeajesDataProvider.cs" />
@@ -278,9 +284,12 @@
     <Compile Include="dto\RutaSatrackLastEvents.cs" />
     <Compile Include="dto\RutasCombustible.cs" />
     <Compile Include="dto\RutasCuentas.cs" />
+    <Compile Include="dto\RutasDestino.cs" />
     <Compile Include="dto\RutasDet.cs" />
     <Compile Include="dto\RutasMaestroPeajes.cs" />
+    <Compile Include="dto\RutasOrigen.cs" />
     <Compile Include="dto\RutasOrigenDestino.cs" />
+    <Compile Include="dto\RutasOrigenTipoTrailer.cs" />
     <Compile Include="dto\RutasSatrackParametros.cs" />
     <Compile Include="dto\RutasSatrackTipoEventos.cs" />
     <Compile Include="dto\Rutas_Peajes.cs" />
