Ajuste los tramos

--- a/MetalLiqViajes_Forms/MetalLiqViajes_Forms/MetalLiqViajes_Forms.csproj
+++ b/MetalLiqViajes_Forms/MetalLiqViajes_Forms/MetalLiqViajes_Forms.csproj
@@ -170,6 +170,7 @@
     <None Include="Properties\DataSources\LiqViajes_Bll_Data.Rutas.datasource" />
     <None Include="Properties\DataSources\LiqViajes_Bll_Data.RutaSatrackHistoryEvents.datasource" />
     <None Include="Properties\DataSources\LiqViajes_Bll_Data.RutaSatrackLastEvents.datasource" />
+    <None Include="Properties\DataSources\LiqViajes_Bll_Data.RutasDestino.datasource" />
     <None Include="Properties\DataSources\LiqViajes_Bll_Data.RutasOrigenDestino.datasource" />
     <None Include="Properties\DataSources\LiqViajes_Bll_Data.TercerosConductores.datasource" />
     <None Include="Properties\DataSources\LiqViajes_Bll_Data.TercerosDTO.datasource" />
@@ -261,6 +262,22 @@
     <None Include="images\GoogleRutas.png" />
     <None Include="images\NewDocumentHS.png" />
     <None Include="images\11.png" />
+    <Content Include="images\edit.png" />
+    <Content Include="images\TitleImages\CloudControl.png" />
+    <Content Include="images\TitleImages\edit.png" />
+    <Content Include="images\TitleImages\GridView.png" />
+    <Content Include="images\TitleImages\Menu.png" />
+    <Content Include="images\TitleImages\NavBar.png" />
+    <Content Include="images\TitleImages\NewsControl.png" />
+    <Content Include="images\TitleImages\Pager.png" />
+    <Content Include="images\TitleImages\PivotGrid.png" />
+    <Content Include="images\TitleImages\PopupControl.png" />
+    <Content Include="images\TitleImages\Scheduler.png" />
+    <Content Include="images\TitleImages\SiteMap.png" />
+    <Content Include="images\TitleImages\TabControl.png" />
+    <Content Include="images\TitleImages\TitleIndex.png" />
+    <Content Include="images\TitleImages\UploadControl.png" />
+    <Content Include="images\TitleImages\Utilities.png" />
     <Content Include="images\Truck.ico" />
     <None Include="images\Truck.png" />
     <None Include="images\YellowCar.png" />
