--- a/MetalLiqViajes_Bll_Data/MetalLiqViajes_Bll_Data.csproj
+++ b/MetalLiqViajes_Bll_Data/MetalLiqViajes_Bll_Data.csproj
@@ -98,6 +98,7 @@
     <Compile Include="bll\RutasMaestroPeajes.cs" />
     <Compile Include="bll\RutasOrigen.cs" />
     <Compile Include="bll\RutasOrigenDestino.cs" />
+    <Compile Include="bll\RutasOrigenDestinoVehTrailer.cs" />
     <Compile Include="bll\RutasOrigenTipoTrailer.cs" />
     <Compile Include="bll\RutasSatrackParametros.cs" />
     <Compile Include="bll\RutasSatrackTipoEventos.cs" />
@@ -193,6 +194,7 @@
     <Compile Include="dal\RutasMaestroPeajesDataProvider.cs" />
     <Compile Include="dal\RutasOrigenDataProvider.cs" />
     <Compile Include="dal\RutasOrigenDestinoDataProvider.cs" />
+    <Compile Include="dal\RutasOrigenDestinoVehTrailerDataProvider.cs" />
     <Compile Include="dal\RutasOrigenTipoTrailerDataProvider.cs" />
     <Compile Include="dal\RutasSatrackParametrosDataProvider.cs" />
     <Compile Include="dal\RutasSatrackTipoEventosDataProvider.cs" />
@@ -289,6 +291,7 @@
     <Compile Include="dto\RutasMaestroPeajes.cs" />
     <Compile Include="dto\RutasOrigen.cs" />
     <Compile Include="dto\RutasOrigenDestino.cs" />
+    <Compile Include="dto\RutasOrigenDestinoVehTrailer.cs" />
     <Compile Include="dto\RutasOrigenTipoTrailer.cs" />
     <Compile Include="dto\RutasSatrackParametros.cs" />
     <Compile Include="dto\RutasSatrackTipoEventos.cs" />
